adding new autocomplete add

--- a/src/Components/MentionList.scss
+++ b/src/Components/MentionList.scss
@@ -15,3 +15,9 @@
     color: #5dcfdb;
   }
 }
+
+.item:hover {
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.284);
+  background-color: #424242;
+  color: #5dcfdb;
+}
