--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
   width: 80%;
   margin: 0 auto;
   color: aliceblue;
+  font-size: 16px;
+  font-family: -apple-system,BlinkMacSystemFont,"Helvetica : Neue",Helvetica,Arial,sans-serif;
 }
 
 * {
@@ -10,6 +12,7 @@
   margin: 0;
   padding: 0;
   background-color: #303030;
+  font-size: 16px;
 }
 
 hr {
@@ -23,4 +26,24 @@ hr {
   height: 100vh;
   width: 100vw;
 
+}
+
+.App-header {
+  text-align: center;
+  color: white;
+}
+
+#note-buttons {
+  margin: 5px;
+  margin-top: 10px;
+  padding: 5px;
+  font-size: 14px;
+  background-color: #424242;
+  color: white;
+  border: 1px solid #2c2c2c;
+  border-radius: 5px;
+}
+
+#note-buttons:hover {
+  background-color: #7a7a7a;
 }
