--- a/src/Components/MentionList.scss
+++ b/src/Components/MentionList.scss
@@ -1,3 +1,11 @@
+:root {
+  --main-color:#303030;
+  --accent-color:#424242;
+  --border-color: #2c2c2c;
+  --button-hover-color: #7a7a7a;
+  --text-color: #5dcfdb;
+}
+
 .item {
   background: inherit;
   color: aliceblue;
@@ -11,13 +19,13 @@
 
   &.is-selected {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.284);
-    background-color: #424242;
-    color: #5dcfdb;
+    background-color: var(--accent-color);
+    color: var(--text-color);
   }
 }
 
 .item:hover {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.284);
-  background-color: #424242;
-  color: #5dcfdb;
+  background-color: var(--accent-color);
+  color: var(--text-color);
 }
