--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
+:root {
+  --main-color:#303030;
+  --accent-color:#424242;
+  --border-color: #2c2c2c;
+  --button-hover-color: #7a7a7a;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  background-color: var(--main-color);
+  font-size: 16px;
+}
+
 .ProseMirror {
   margin-top: 0.75em;
   width: 80%;
@@ -7,17 +22,9 @@
   font-family: -apple-system, BlinkMacSystemFont, "Helvetica : Neue", Helvetica, Arial, sans-serif;
 }
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  background-color: #303030;
-  font-size: 16px;
-}
-
 hr {
   width: 80%;
-  border: 1px solid #424242;
+  border: 1px solid var(--accent-color);
   margin: 0 auto;
   margin-top: 10px;
 }
@@ -38,12 +45,12 @@ hr {
   margin-top: 10px;
   padding: 5px;
   font-size: 14px;
-  background-color: #424242;
+  background-color: var(--accent-color);
   color: white;
-  border: 1px solid #2c2c2c;
+  border: 1px solid var(--border-color);
   border-radius: 5px;
 }
 
 #note-buttons:hover {
-  background-color: #7a7a7a;
+  background-color: var(--button-hover-color);
 }
