--- a/src/Components/styles.scss
+++ b/src/Components/styles.scss
@@ -1,3 +1,13 @@
+
+:root {
+  --main-color:#303030;
+  --accent-color:#424242;
+  --border-color: #2c2c2c;
+  --button-hover-color: #7a7a7a;
+  --text-color: #5dcfdb;
+}
+
+
 .ProseMirror {
   > * + * {
     margin-top: 0.75em;
@@ -8,7 +18,7 @@
 
 
 .autocomplete {
-  color: #5dcfdb;
+  color: var(--text-color);
 }
 
 .items {
